Update index.html title

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="./style.css">
     <link href="https://fonts.googleapis.com/css2?family=Material+Icons"
       rel="stylesheet">
-    <title>Excel</title>
+    <title>Google Sheets</title>
 </head>
 <body>
     <div class="page-actions-cont">
